--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,19 @@
-<h1>Show/Users</h1>
+<main>
+  <%= render partial: 'shared/user_card', locals: { user: @user } %>
+  <div class="m-5 border-4 w-full p-2">
+    <h3 class="font-bold mb-2">Bio</h3>
+    <p><%= @user.bio %></p>
+  </div>
+  <% @user.recent_posts.each_with_index do |post, i| %>
+    <div class=" m-5 border-2 w-full p-4">
+      <h3 class="font-bold mb-4">Post #<%= i + 1 %></h3>
+      <p class="mb-4"><%= post.text %></p>
+      <p class="text-end">Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></p>
+    </div>
+  <% end %>
+  <div class="flex justify-center mb-20">
+  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ">
+    <%= link_to 'See all posts', user_posts_path(@user) %>
+  </button>
+  </div>
+</main>
