--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,11 +5,7 @@
     <p><%= @user.bio %></p>
   </div>
   <% @user.recent_posts.each_with_index do |post, i| %>
-    <div class=" m-5 border-2 w-full p-4">
-      <h3 class="font-bold mb-4">Post #<%= i + 1 %></h3>
-      <p class="mb-4"><%= post.text %></p>
-      <p class="text-end">Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></p>
-    </div>
+    <%= render partial: 'shared/post_card', locals: { post: post, i: i } %>
   <% end %>
   <div class="flex justify-center mb-20">
   <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ">
