--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,9 +7,5 @@
   <% @user.recent_posts.each_with_index do |post, i| %>
     <%= render partial: 'shared/post_card', locals: { post: post, i: i } %>
   <% end %>
-  <div class="flex justify-center mb-20">
-  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ">
-    <%= link_to 'See all posts', user_posts_path(@user) %>
-  </button>
-  </div>
+  <%= render partial: 'shared/button', locals: { text: 'See all posts', path: user_posts_path(@user) } %>
 </main>
