--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <div class="w-full gap-2 flex flex-col justify-center">
+  <button><%=link_to "New Post", new_post_path %></button>
   <% @users.each do |user| %>
     <%= render partial: 'shared/user_card', locals: { user: user } %>
   <% end %>
