Update styles from post form

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full gap-2 flex flex-col justify-center">
-  <button><%=link_to "New Post", new_post_path %></button>
+  <button class="bg-blue-500 w-[150px] mx-auto hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"><%=link_to "New Post", new_post_path %></button>
   <% @users.each do |user| %>
     <%= render partial: 'shared/user_card', locals: { user: user } %>
   <% end %>
