--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,45 @@
-<h2>Sign up</h2>
+<div class="flex flex-col gap-2 p-6 w-full">
+  <h2 class="text-2xl font-bold">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :name %><br/>
+      <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "field-box border-2 p-2 w-full my-2", placeholder: " Name" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :photo %><br />
-    <%= f.file_field :photo %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :photo %><br/>
+      <%= f.file_field :photo %>
+    </div>
 
-  <div class="field">
-    <%= f.label :bio %><br />
-    <%= f.text_field :bio %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :bio %><br/>
+      <%= f.text_field :bio, autofocus: true, autocomplete: "bio", class: "field-box border-2 p-2 w-full my-2", placeholder: " Bio" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :email %><br/>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "field-box border-2 p-2 w-full my-2", placeholder: " Email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="my-5">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br/>
+      <%= f.password_field :password, autocomplete: "new-password", class: "field-box border-2 p-2 w-full my-2", placeholder: " Password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field my-5">
+      <%= f.label :password_confirmation %><br/>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "field-box border-2 p-2 w-full my-2", placeholder: " Password confirmation" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-<%= render "devise/shared/links" %>
+    <div class="actions">
+      <%= f.submit "Sign up", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded my-5 w-full" %>
+    </div>
+  <% end %>
+  <%= render "devise/shared/links" %>
+</div>
