--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,6 +13,7 @@
   </div>
   <%= render 'shared/comment_form' %>
   <div class="flex justify-end -mt-10 ">
-  <%= render 'shared/like' %>
+    <%= render 'shared/like' %>
   </div>
+  <%= link_to 'Delete', user_post_path(user, @post), data: { turbo_method: :delete } %>
 </main>
