--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,5 +15,9 @@
   <div class="flex justify-end -mt-10 ">
     <%= render 'shared/like' %>
   </div>
-  <%= link_to 'Delete', user_post_path(user, @post), data: { turbo_method: :delete } %>
+  <% if can? :update, @post%>
+    <%= link_to 'Delete', user_post_path(user, @post), data: {
+      turbo_method: :delete
+    } %>
+  <%end%>
 </main>
