--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,13 +9,21 @@
       </div>
       <p><%= @post.text %></p>
     </div>
-    <%= render partial: 'shared/comments', locals: { comments: @comments } %>
+    <% @comments.each_with_index do |comment, ind| %>
+      <% user = User.find(@post.author_id) %>
+      <p class="border-b-2 p-2 px-6"><span class="font-bold"><%= comment.author.name %>:</span> <%= comment.text %></p>
+      <% if can? :update, comment %>
+        <%= link_to 'Delete', user_post_comment_path(user, @post, comment), data: {
+          turbo_method: :delete
+        } %>
+      <% end %>
+    <% end %>
   </div>
   <%= render 'shared/comment_form' %>
   <div class="flex justify-end -mt-10 ">
     <%= render 'shared/like' %>
   </div>
-  <% if can? :update, @post%>
+  <% if can? :destroy, @post%>
     <%= link_to 'Delete', user_post_path(user, @post), data: {
       turbo_method: :delete
     } %>
