--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,10 +12,8 @@
     <% @comments.each_with_index do |comment, ind| %>
       <% user = User.find(@post.author_id) %>
       <p class="border-b-2 p-2 px-6"><span class="font-bold"><%= comment.author.name %>:</span> <%= comment.text %></p>
-      <% if can? :update, comment %>
-        <%= link_to 'Delete', user_post_comment_path(user, @post, comment), data: {
-          turbo_method: :delete
-        } %>
+      <% if (can? :destroy, comment) || (comment.author.id == current_user.id) %>
+        <%= button_to "Delete comment", user_post_comment_path(user,@post,comment), method: :delete %>
       <% end %>
     <% end %>
   </div>
@@ -23,9 +21,7 @@
   <div class="flex justify-end -mt-10 ">
     <%= render 'shared/like' %>
   </div>
-  <% if can? :destroy, @post%>
-    <%= link_to 'Delete', user_post_path(user, @post), data: {
-      turbo_method: :delete
-    } %>
+  <% if (can? :update, @post) || (@post.author.id == current_user.id) %>
+    <%= button_to "Delete post", user_post_path(user,@post), method: :delete %>
   <%end%>
 </main>
